--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
           <configuration>
             <suiteXmlFiles>
               <suiteXmlFile>TestNGSuites/testng.xml</suiteXmlFile>
-            </suiteXmlFiles>
+            </suiteXmlFiles><argLine>-javaagent:"${com.browserstack:browserstack-java-sdk:jar}"</argLine>
           </configuration>
         </plugin>
       </plugins>
@@ -110,7 +110,7 @@
               <configuration>
                 <suiteXmlFiles>
                   <suiteXmlFile>TestNGSuites/testng_Smoke.xml</suiteXmlFile>
-                </suiteXmlFiles>
+                </suiteXmlFiles><argLine>-javaagent:"${com.browserstack:browserstack-java-sdk:jar}"</argLine>
               </configuration>
             </plugin>
           </plugins>
